<resources>
    <string name="app_name">CarFleet</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="not_registered1">Not Registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="hello_world">Hello from CarFleet!</string>
    <string name="email">Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="not_registered_yet">Not Registered Yet?</string>
    <string name="create_group">Create group</string>
    <string name="settings">Settings</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="add_group_members">Add Group Members</string>
    <string name="group_name">Group Name</string>
    <string name="create_your_group">Create Your Group!</string>
    <string name="name">Name</string>
    <string name="group_members">Group Members</string>
    <string name="manager">Manager</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="new_item">New item</string>
    <string name="add">Add</string>

</resources>
